fix each sides spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,12 +41,18 @@ main {
   h1 {
     font-size: 2em;
     line-height: 1.5em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
   }
   .container {
-    padding-left: 0;
-    padding-right: 0;
     width: auto;
+  }
+  .container,
+  th:first-child,
+  td:first-child {
+    padding-left: 1.5rem;
+  }
+  .container,
+  th:last-child,
+  td:last-child {
+    padding-right: 1.5rem;
   }
 }
